Fix annotation checker